--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,9 @@
 	ignore = dirty
 [submodule "build/ffmpeg-webm"]
 	path = build/ffmpeg-webm
-	url = https://git.ffmpeg.org/ffmpeg.git
+	url = https://gitee.com/mirrors/ffmpeg.git
 	ignore = dirty
 [submodule "build/ffmpeg-mp4"]
 	path = build/ffmpeg-mp4
-	url = https://git.ffmpeg.org/ffmpeg.git
+	url = https://gitee.com/mirrors/ffmpeg.git
 	ignore = dirty
